@@ -1,3 +1,13 @@
+2004-10-26  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* mixer/applet.c: (gnome_volume_applet_setup),
+	(gnome_volume_applet_popup_dock),
+	(gnome_volume_applet_popdown_dock):
+	  Behave like a menu (fixes #98355).
+	(gnome_volume_applet_toggle_mute),
+	(gnome_volume_applet_orientation), (cb_verb), (cb_ui_event):
+	  Fix mute behaviour via the menu (fixes #153553).
+
 2004-10-26  Davyd Madeley  <davyd@madeley.id.au>
 
 	* Makefile.am:
